<?xml version="1.0"?>
<package>
  <name>mitya_teleop</name>
  <description>Robot Mitya: The mitya_teleop package</description>

  <version>3.0.0</version>
  <maintainer email="DzakhovDS@gmail.com">Dmitry Dzakhov</maintainer>
  <author email="DzakhovDS@gmail.com">Dmitry Dzakhov</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/mitya_teleop</url>
  <url type="repository">https://github.com/robot-mitya/ros3</url>
  <url type="bugtracker">https://github.com/robot-mitya/ros3/issues</url>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
